# django-static-mathjax

./: .gitignore  .gitmodules  README.md  pyproject.toml
