[project]
name        = "django-static-mathjax"
version     = "3.2.2.1"
description = "JavaScript library for displaying mathematics on the Web"
readme      = "README.md"
maintainers = [
  {name = "Benjamin Moody", email = "bmoody@mit.edu"},
]
license = "Apache-2.0"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Programming Language :: JavaScript",
  "Topic :: Text Processing :: Markup :: LaTeX",
]

[build-system]
requires      = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"
